# armchair_fw

./: .gitignore  README.md  sdkconfig
board_control/: CMakeLists.txt
board_control/main/: CMakeLists.txt  auto.cpp  auto.hpp  button.cpp  button.hpp  config.cpp  config.hpp  control.cpp  control.hpp  encoder.cpp  encoder.hpp  http.cpp  joystick.cpp  main.cpp  motorctl.cpp  motordrivers.cpp  uart.cpp  uart.hpp
board_motorctl/: CMakeLists.txt  README.md  sdkconfig
board_motorctl/main/: CMakeLists.txt  button.cpp  config.cpp  config.hpp  fan.hpp  main.cpp  motorctl.cpp  (+7 more)
board_single/: CMakeLists.txt  sdkconfig
board_single/main/: CMakeLists.txt  auto.cpp  auto.hpp  button.cpp  button.hpp  config.cpp  config.h  config.hpp  control.cpp  control.hpp  currentsensor.cpp  currentsensor.hpp  display.cpp  display.hpp  encoder.cpp  encoder.hpp  fan.cpp  main.cpp  menu.cpp  menu.hpp  wifi.c
board_single/src/: CMakeLists.txt  button.cpp  display.cpp  encoder.cpp  fan.cpp
common/: CMakeLists.txt  buzzer.cpp  buzzer.hpp  chairAdjust.cpp  chairAdjust.hpp  currentsensor.cpp  currentsensor.hpp  http.cpp  http.hpp  joystick.cpp  joystick.hpp  motorctl.cpp  motorctl.hpp  motordrivers.cpp  motordrivers.hpp  speedsensor.cpp  speedsensor.hpp  types.hpp  uart_common.cpp  uart_common.hpp  wifi.c  wifi.h
common/include/: buzzer.hpp  chairAdjust.hpp  motorctl.hpp  speedsensor.hpp  types.hpp
common/src/: CMakeLists.txt  motorctl.cpp  speedsensor.cpp  types.cpp  uart_common.cpp
main/: CMakeLists.txt  auto.cpp  auto.hpp  button.cpp  button.hpp  config.cpp  config.hpp  control.cpp  control.hpp  fan.cpp  fan.hpp  http.cpp  http.hpp  joystick.cpp  joystick.hpp  main.cpp  motorctl.cpp  motorctl.hpp  motordrivers.cpp  motordrivers.hpp  wifi.c
react-app/: package-lock.json
(+29 files in other folders)
